一旦コミット

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
 
     <div class="container">
-      <h1>kid84blog</h1>
+      <h1>kid84blog test</h1>
       <div id="main" role="main">
         
 
